# protoc-gen-star

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  .travis.yml  BUILD.bazel  Makefile  README.md  WORKSPACE  artifact.go  ast.go  ast_test.go  build_context.go  debug_test.go  dependents.go  dependents_test.go  entity.go  enum.go  enum_test.go  enum_value.go  enum_value_test.go  extension.go  extension_test.go  field.go  field_test.go  field_type.go  field_type_elem.go  field_type_elem_test.go  field_type_test.go  file.go  file_test.go  gatherer.go  gatherer_test.go  generator.go  generator_test.go  glide.yaml  go.mod  go.sum  init_option.go  init_option_test.go  message.go  (+25 more)
.github/workflows/: actions.yml  pre-commit.yml  test.yml
gogoproto/: gogo.pb.go
lang/go/: Makefile  camel.go  context.go  context_test.go  gofmt.go  gofmt_test.go  goimports.go  goimports_test.go  helpers_test.go  name.go  name_test.go  package.go  package_test.go  parameters.go  parameters_test.go  type_name.go  type_name_p2_presence_test.go  type_name_p3_presence_test.go  type_name_test.go
lang/go/testdata/names/entities/: entities.proto
lang/go/testdata/names/full_import_path/: params
lang/go/testdata/names/keyword/: keyword.proto
lang/go/testdata/names/path_dash/: path_dash.proto
lang/go/testdata/outputs/import_prefix_srcrel/: params
protoc-gen-debug/: main.go
testdata/graph/extensions/: everything.proto
testdata/graph/messages/: recursive.proto
testdata/graph/reflection/: everything.proto
testdata/graph/reflection/ext/: api.proto  data.proto
testdata/graph/reflection/other/: entities.proto
testdata/protoc-gen-example/: jsonify.go  main.go  printer.go
testdata/protos/kitchen/: emptyservice.proto  fridge.proto
testdata/protos/multipackage/reflection/: everything.proto
testdata/protos/multipackage/reflection/ext/: api.proto  data.proto
testdata/protos/multipackage/reflection/other/: entities.proto
testdata/protos/reflection/: everything.proto
testdata/protos/reflection/ext/: api.proto  data.proto
testdata/protos/reflection/other/: entities.proto
testutils/: loader.go  loader_test.go
v2/: ast_test.go  entity.go  enum.go  enum_test.go  enum_value.go  enum_value_test.go  extension.go  extension_test.go  field.go  field_test.go  file.go  file_test.go  generator_test.go  go.mod  go.sum  message.go  message_test.go  method.go  module.go  oneof.go  oneof_test.go  persister.go  proto_test.go  service.go  source_code_info_test.go  workflow.go  workflow_test.go
v2/lang/go/: Makefile  helpers_test.go  name_test.go  package_test.go  parameters.go  parameters_test.go  type_name_p2_presence_test.go  type_name_p3_presence_test.go  type_name_test.go
