load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude testdata
gazelle(
    name = "gazelle",
    external = "external",
    prefix = "github.com/lyft/protoc-gen-star",
)

test_suite(
    name = "all_tests",
    tests = [
        ":go_default_test",
    ],
)

go_library(
    name = "go_default_library",
    srcs = [
        "artifact.go",
        "build_context.go",
        "comment.go",
        "debug.go",
        "docs.go",
        "entity.go",
        "enum.go",
        "enum_value.go",
        "extension.go",
        "field.go",
        "field_type.go",
        "field_type_elem.go",
        "file.go",
        "gatherer.go",
        "generator.go",
        "init_option.go",
        "message.go",
        "method.go",
        "module.go",
        "name.go",
        "node.go",
        "oneof.go",
        "package.go",
        "parameters.go",
        "path.go",
        "persister.go",
        "plugin.go",
        "post_process.go",
        "proto.go",
        "protoc_gen_go.go",
        "service.go",
        "workflow.go",
        "workflow_multipackage.go",
    ],
    importpath = "github.com/lyft/protoc-gen-star",
    visibility = ["//visibility:public"],
    # Keep referencing the plugin and descriptor libraries directly. using the WKT's declared in `io_bazel_rules_go`
    # causes problems.
    # gazelle will prefer these by default.
    #   "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
    #   "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    #keep
    deps = [
        "@com_github_golang_protobuf//descriptor:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/descriptor:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/generator:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/plugin:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "artifact_test.go",
        "build_context_test.go",
        "comment_test.go",
        "debug_test.go",
        "enum_test.go",
        "enum_value_test.go",
        "extension_test.go",
        "field_test.go",
        "field_type_elem_test.go",
        "field_type_test.go",
        "file_test.go",
        "gatherer_test.go",
        "generator_test.go",
        "init_option_test.go",
        "message_test.go",
        "method_test.go",
        "module_test.go",
        "name_test.go",
        "node_nilvisitor_test.go",
        "node_passvisitor_test.go",
        "node_test.go",
        "oneof_test.go",
        "package_test.go",
        "parameters_test.go",
        "path_test.go",
        "persister_test.go",
        "plugin_test.go",
        "post_process_test.go",
        "proto_test.go",
        "protoc_gen_go_test.go",
        "service_test.go",
        "workflow_multipackage_test.go",
        "workflow_test.go",
    ],
    embed = [":go_default_library"],
    # see comment above
    #keep
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/descriptor:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/generator:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/plugin:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)
